// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: eficiente, SOC 60 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 20.3,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 18.7,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 60,
      "label": "Ruta A",
      "minSoc": 20.3,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 158,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 20.8,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 18.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 60,
      "label": "Ruta B",
      "minSoc": 20.8,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 157,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 18.8,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 19.4,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 60,
      "label": "Ruta C",
      "minSoc": 18.8,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 173,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 15.5,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 21,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 60,
      "label": "Ruta D",
      "minSoc": 15.5,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 178,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: menos paradas, SOC 90 %, sport 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 48,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 19.8,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 48,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 131,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 48.4,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 19.6,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 48.4,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 131,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 46.1,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 20.7,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 46.1,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 144,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 43.2,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 22,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 43.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 149,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: modo más rápido, SOC 35 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 19.1,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 20,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 19.1,
      "noTolls": undefined,
      "stops": [
        "s20 32.5→59 17 min",
      ],
      "totalMinutes": 167,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 17.7,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 19.1,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 17.7,
      "noTolls": undefined,
      "stops": [
        "s20 33.8→57.1 16 min",
      ],
      "totalMinutes": 160,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -7.1,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 19.8,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 35,
      "label": "Ruta C",
      "minSoc": -7.1,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -10.4,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 21.4,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 35,
      "label": "Ruta D",
      "minSoc": -10.4,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 161,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: más segura, SOC 15 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 30.1,
      "departureCharge": 8,
      "distanceKm": 129.1,
      "energyKwh": 20,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 23,
      "label": "Ruta A",
      "minSoc": 20.5,
      "noTolls": undefined,
      "stops": [
        "s20 20.5→70 28 min",
      ],
      "totalMinutes": 178,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 28.7,
      "departureCharge": 7,
      "distanceKm": 128.7,
      "energyKwh": 19.1,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 22,
      "label": "Ruta B",
      "minSoc": 20.8,
      "noTolls": undefined,
      "stops": [
        "s20 20.8→68.1 27 min",
      ],
      "totalMinutes": 171,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -27.1,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 19.8,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 15,
      "label": "Ruta C",
      "minSoc": -27.1,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -30.4,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 21.4,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 15,
      "label": "Ruta D",
      "minSoc": -30.4,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 161,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > menos paradas, SOC 90 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 43.2,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 22,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 43.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 43.6,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 21.8,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 43.6,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 40.6,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 23.3,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 40.6,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 146,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 37.3,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 24.8,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 37.3,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 151,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > menos paradas, SOC 90 % 2`] = `"b196fcfd0a27939a"`;

exports[`caracterización del pipeline con proveedores sintéticos > modo más rápido, SOC 35 %: resumen y huella del resultado completo 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 18.9,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 21.3,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 18.9,
      "noTolls": undefined,
      "stops": [
        "s20 32.3→61.5 19 min",
      ],
      "totalMinutes": 168,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 17.5,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 17.5,
      "noTolls": undefined,
      "stops": [
        "s20 33.6→59.5 17 min",
      ],
      "totalMinutes": 160,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -10.6,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 21.5,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 35,
      "label": "Ruta C",
      "minSoc": -10.6,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -14.1,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 23.1,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 35,
      "label": "Ruta D",
      "minSoc": -14.1,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > modo más rápido, SOC 35 %: resumen y huella del resultado completo 2`] = `"b93032a7ce4927d7"`;

exports[`caracterización del pipeline con proveedores sintéticos > más segura, SOC 15 %, margen conservador (pide carga antes de salir) 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 29.9,
      "departureCharge": 8,
      "distanceKm": 129.1,
      "energyKwh": 21.3,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 23,
      "label": "Ruta A",
      "minSoc": 20.3,
      "noTolls": undefined,
      "stops": [
        "s20 20.3→72.5 30 min",
      ],
      "totalMinutes": 179,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 28.5,
      "departureCharge": 7,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 22,
      "label": "Ruta B",
      "minSoc": 20.6,
      "noTolls": undefined,
      "stops": [
        "s20 20.6→70.5 29 min",
      ],
      "totalMinutes": 172,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -30.6,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 21.5,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 15,
      "label": "Ruta C",
      "minSoc": -30.6,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -34.1,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 23.1,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 15,
      "label": "Ruta D",
      "minSoc": -34.1,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > más segura, SOC 15 %, margen conservador (pide carga antes de salir) 2`] = `"126ea4b3b12102f4"`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: menos paradas, SOC 90 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 43.2,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 22,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 43.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 43.6,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 21.8,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 43.6,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 40.6,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 23.3,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 40.6,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 146,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 37.3,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 24.8,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 37.3,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 151,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: modo más rápido, SOC 35 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 16,
      "departureCharge": undefined,
      "distanceKm": 130.6,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 16,
      "noTolls": undefined,
      "stops": [
        "s20 33.5→58 17 min",
      ],
      "totalMinutes": 159,
      "verification": "verified en 1",
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 16,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 16,
      "noTolls": undefined,
      "stops": [
        "s20 33.6→58 16 min",
      ],
      "totalMinutes": 160,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 15.4,
      "departureCharge": 26,
      "distanceKm": 144,
      "energyKwh": 21.5,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 61,
      "label": "Ruta C",
      "minSoc": 15.4,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 15.9,
      "departureCharge": 30,
      "distanceKm": 149.4,
      "energyKwh": 23.1,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 65,
      "label": "Ruta D",
      "minSoc": 15.9,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: más segura, SOC 15 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 21,
      "departureCharge": 7,
      "distanceKm": 130.6,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 22,
      "label": "Ruta A",
      "minSoc": 20.5,
      "noTolls": undefined,
      "stops": [
        "s20 20.5→63 25 min",
      ],
      "totalMinutes": 168,
      "verification": "verified en 1",
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 21,
      "departureCharge": 7,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 22,
      "label": "Ruta B",
      "minSoc": 20.6,
      "noTolls": undefined,
      "stops": [
        "s20 20.6→63 25 min",
      ],
      "totalMinutes": 168,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 20.9,
      "departureCharge": 55,
      "distanceKm": 149.4,
      "energyKwh": 23.1,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 70,
      "label": "Ruta D",
      "minSoc": 20.9,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
    {
      "arrivalSoc": 20.4,
      "departureCharge": 51,
      "distanceKm": 144,
      "energyKwh": 21.5,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 66,
      "label": "Ruta C",
      "minSoc": 20.4,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;
